--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,7 @@ services:
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/Api/ApiV1Bundle/Controller'
+        resource: '../src/Api/ApiV1Bundle/Controller.php'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
