--- a/src/Packages/Authentication/services.yaml
+++ b/src/Packages/Authentication/services.yaml
@@ -3,4 +3,4 @@ services:
     autowire: true
 
   App\Packages\Application\UserByIdQuery:
-    resource: App\Packages\Authentication\DbalUserByIdQuery
+    class: App\Packages\Authentication\DbalUserByIdQuery
