--- a/src/Resources/services.yaml
+++ b/src/Resources/services.yaml
@@ -2,5 +2,5 @@ services:
   _defaults:
     autowire: true
 
-  App\Resources\Application\UserRepository:
-    class: App\Packages\Authentication\DbalUserRepository
+  #App\Resources\Application\UserRepository:
+    #class: App\Packages\Authentication\DbalUserRepository
