doctrine configuration done + bundle preparation

--- a/src/Packages/services.yaml
+++ b/src/Packages/services.yaml
@@ -4,3 +4,5 @@ services:
 
   App\Packages\Common\Application\Command\StateManager:
     class: App\Packages\Common\Infrastructure\Command\DbalStateManager
+
+  App\Packages\Common\Infrastructure\DbalConnection: '@doctrine.dbal.default_connection'
