finalization of feature

--- a/.env.dev
+++ b/.env.dev
@@ -8,3 +8,11 @@ APP_SECRET=5cb3c287442791e6d46c3fb40a80f524
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_DEFAULT_DBNAME=symfonyApi
+DATABASE_DEFAULT_USER=root
+DATABASE_DEFAULT_PASSWORD=
+DATABASE_DEFAULT_HOST=localhost
+DATABASE_DEFAULT_DRIVER=pdo_mysql
+###< doctrine/doctrine-bundle ###
