--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 ApiV1Bundle:
     prefix: /api/v1
-    resource: '../src/Api/ApiV1Bundle/routes.yaml'
+    resource: '@ApiV1Bundle/Resources/config/routing.yaml'
