--- a/src/Api/ApiV1Bundle/Resources/config/routing.yaml
+++ b/src/Api/ApiV1Bundle/Resources/config/routing.yaml
@@ -1,5 +1,5 @@
 api_v1_blubb2:
-    path: /blubb2
+    path: /user
     controller: App\Api\ApiV1Bundle\Controller::handle
     defaults:
       path: ''
