--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
 ApiV1Bundle:
     prefix: /api/v1
-    resource: '@ApiV1Bundle/Resources/config/routing.yaml'
+    resource: 'App\Api\ApiV1Bundle\RoutesLoader::load'
+    type: service
