--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,4 @@ services:
 imports:
     - { resource: ../src/Packages/services.yaml }
     - { resource: ../src/Resources/services.yaml }
+    - { resource: ../src/Api/ApiV1Bundle/services.yaml }
