--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "WebApiV1Bundle\\": "src/App/Api/WebApiV1Bundle"
         }
     },
     "autoload-dev": {
