--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "WebApiV1Bundle\\": "src/App/Api/WebApiV1Bundle"
+            "AppWebApiV1Bundle\\": "src/Bundles/AppWebApiV1Bundle"
         }
     },
     "autoload-dev": {
