created migration concept without services

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,3 +4,4 @@ parameters:
 imports:
     - { resource: '../src/Packages/Common/services.yaml' }
     - { resource: '../src/Packages/UserManagement/services.yaml' }
+    - { resource: '../src/CLI/services.yaml' }
