--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "App\\Packages\\Common": "Packages/Common/src/",
-            "App\\Packages\\UserManagement": "Packages/UserManagement/src/",
-            "AppWebApiV1Bundle\\": "src/Bundles/AppWebApiV1Bundle"
+            "App\\Packages\\Common\\": "src/Packages/Common/src/",
+            "App\\Packages\\UserManagement\\": "src/Packages/UserManagement/src/"
         }
     },
     "autoload-dev": {
