finalized migration commands

--- a/src/CLI/services.yaml
+++ b/src/CLI/services.yaml
@@ -4,5 +4,6 @@ services:
         tags: ['console.command']
 
     App\CLI\Migration\MigrateCommand: ~
+    App\CLI\Migration\RollbackCommand: ~
 
 
