added fixtures, concept changed

--- a/.env.dev
+++ b/.env.dev
@@ -16,3 +16,7 @@ DATABASE_DEFAULT_PASSWORD=
 DATABASE_DEFAULT_HOST=localhost
 DATABASE_DEFAULT_DRIVER=pdo_mysql
 ###< doctrine/doctrine-bundle ###
+
+###> APP ###
+ADMIN_FIXTURE_PASSWORD=test
+###< APP ###
