--- a/src/Packages/Common/services.yaml
+++ b/src/Packages/Common/services.yaml
@@ -3,8 +3,10 @@ services:
         autowire: true
 
     App\Packages\Common\Application\CommandBus: ~
+    App\Packages\Common\Application\Authorization\RolesRepository: ~
     App\Packages\Common\Application\Authorization\UserFactory: ~
 
+    App\Packages\Common\Domain\EventManager: ~
     App\Packages\Common\Application\StateManager:
         class: App\Packages\Common\Infrastructure\DbalStateManager
 
