--- a/.env.dev
+++ b/.env.dev
@@ -18,5 +18,7 @@ DATABASE_DEFAULT_DRIVER=pdo_mysql
 ###< doctrine/doctrine-bundle ###
 
 ###> APP ###
-ADMIN_FIXTURE_PASSWORD=test
+APP_ADMIN_USERNAME=admin
+APP_ADMIN_EMAIL=admin@example.com
+APP_ADMIN_PASSWORD=test
 ###< APP ###
