--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
+            "App\\CLI\\": "src/CLI/src/",
             "App\\Packages\\Common\\": "src/Packages/Common/src/",
             "App\\Packages\\UserManagement\\": "src/Packages/UserManagement/src/"
         }
