--- a/config/services_dev.yaml
+++ b/config/services_dev.yaml
@@ -1,3 +1,3 @@
 imports:
-    - { resource: '../src/Packages/UserManagement/services_dev.yaml' }
-    - { resource: '../src/CLI/services_dev.yaml' }
+    - { resource: '../src/Packages/UserManagement/services/dev.yaml' }
+    - { resource: '../src/CLI/services/dev.yaml' }
