--- a/src/Packages/Common/services/prod.yaml
+++ b/src/Packages/Common/services/prod.yaml
@@ -5,6 +5,7 @@ services:
     App\Packages\Common\Application\CommandBus: ~
     App\Packages\Common\Application\Authorization\RolesRepository: ~
     App\Packages\Common\Application\Authorization\UserFactory: ~
+    App\Packages\Common\Application\DateTimeFactory: ~
 
     App\Packages\Common\Domain\EventDispatcher: ~
 
@@ -20,3 +21,6 @@ services:
         arguments: [!tagged 'app.event_projection']
 
     App\Packages\Common\Infrastructure\DbalConnection: '@doctrine.dbal.default_connection'
+
+imports:
+    - { resource: './imports/projections.yaml' }
