--- a/src/CLI/services/dev.yaml
+++ b/src/CLI/services/dev.yaml
@@ -1,12 +1,7 @@
 services:
     _defaults:
         autowire: true
-
-    App\CLI\Migrations\MigrateCommand:
         tags: ['console.command']
 
-    App\CLI\Migrations\RollbackCommand:
-        tags: ['console.command']
-
-    App\CLI\Migrations\MigrationRepository:
-        arguments: [!tagged 'app.migration']
+    App\CLI\Migrations\MigrateCommand: ~
+    App\CLI\Migrations\RollbackCommand: ~
