--- a/src/CLI/services/prod.yaml
+++ b/src/CLI/services/prod.yaml
@@ -1,10 +1,7 @@
 services:
     _defaults:
         autowire: true
-
-    App\CLI\Fixtures\ExecuteCommand:
         tags: ['console.command']
 
-    App\CLI\Fixtures\FixtureRepository:
-        arguments: [!tagged 'app.fixture']
+    App\CLI\Fixtures\ExecuteCommand: ~
 
