--- a/src/Packages/Common/services/imports/migrations.yaml
+++ b/src/Packages/Common/services/imports/migrations.yaml
@@ -3,4 +3,5 @@ services:
         autowire: true
         tags: ['app.migration']
 
+    App\Packages\Common\Installation\Migrations\MigrationsMigration201901121802: ~
     App\Packages\Common\Installation\Migrations\AuditLogMigration201901082310: ~
