preparation for email jobs done

--- a/src/Packages/JobQueuing/services/imports/migrations.yaml
+++ b/src/Packages/JobQueuing/services/imports/migrations.yaml
@@ -3,4 +3,4 @@ services:
         autowire: true
         tags: ['app.migration']
 
-    App\Packages\JobManagement\Installation\Migrations\JobsMigration201901131125: ~
+    App\Packages\JobQueuing\Installation\Migrations\JobsMigration201901131125: ~
