--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/yaml": "*"
     },
     "require-dev": {
@@ -33,7 +34,7 @@
             "App\\": "src/",
             "App\\CLI\\": "src/CLI/src/",
             "App\\Packages\\Common\\": "src/Packages/Common/src/",
-            "App\\Packages\\JobManagement\\": "src/Packages/JobQueuing/src/",
+            "App\\Packages\\JobQueuing\\": "src/Packages/JobQueuing/src/",
             "App\\Packages\\UserManagement\\": "src/Packages/UserManagement/src/"
         }
     },
