--- a/src/Packages/JobQueuing/services/prod.yaml
+++ b/src/Packages/JobQueuing/services/prod.yaml
@@ -2,16 +2,16 @@ services:
     _defaults:
         autowire: true
 
-    App\Packages\JobManagement\Application\Command\CreateJob\JobFactory: ~
+    App\Packages\JobQueuing\Application\Command\CreateJob\JobFactory: ~
 
-    App\Packages\JobManagement\Application\Command\CreateJob\CreateJobHandler:
+    App\Packages\JobQueuing\Application\Command\CreateJob\CreateJobHandler:
         public: true
         tags: ['app.command_handler']
 
-    App\Packages\JobManagement\Application\Resources\Job\JobRepository:
-        class: App\Packages\JobManagement\Infrastructure\Job\DbalJobRepository
+    App\Packages\JobQueuing\Application\Resources\Job\JobRepository:
+        class: App\Packages\JobQueuing\Infrastructure\Job\DbalJobRepository
 
-    App\Packages\JobManagement\Domain\Job\JobValidator: ~
+    App\Packages\JobQueuing\Domain\Job\JobValidator: ~
 
 imports:
     - { resource: './imports/projections.yaml' }
