--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,7 @@
 swiftmailer:
-    url: '%env(MAILER_URL)%'
-    spool: { type: 'memory' }
+    username: '%env(APP_EMAIL_USERNAME)%'
+    password: '%env(APP_EMAIL_PASSWORD)%'
+    host: '%env(APP_EMAIL_HOST)%'
+    port: '%env(APP_EMAIL_PORT)%'
+    transport: '%env(APP_EMAIL_TRANSPORT)%'
+    encryption: '%env(APP_EMAIL_ENCRYPTION)%'
