--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
-        "symfony/dotenv": "*"
+        "symfony/dotenv": "*",
+        "symfony/phpunit-bridge": "4.2.*"
     },
     "config": {
         "preferred-install": {
