--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
+            "App\\Tests\\": "tests/",
             "App\\CLI\\": "src/CLI/src/",
             "App\\Packages\\Common\\": "src/Packages/Common/src/",
             "App\\Packages\\JobQueuing\\": "src/Packages/JobQueuing/src/",
