--- a/.env.dev
+++ b/.env.dev
@@ -17,8 +17,22 @@ DATABASE_DEFAULT_HOST=localhost
 DATABASE_DEFAULT_DRIVER=pdo_mysql
 ###< doctrine/doctrine-bundle ###
 
-###> APP ###
+###> app ###
 APP_ADMIN_USERNAME=admin
 APP_ADMIN_EMAIL=admin@example.com
 APP_ADMIN_PASSWORD=test
-###< APP ###
+
+APP_NAME=SymfonyApp
+APP_WEBFRONTEND_VERIFICATION_URL=http://localhost:8080/auth/verification/%verificationCode%
+APP_WEBFRONTEND_PASSWORD_RESET_URL=http://localhost:8080/auth/pwreset/%passwordResetCode%
+
+APP_EMAIL_ADDRESS_TO=contact@example.com
+APP_EMAIL_ADDRESS_TO_DEV=admin@example.com
+APP_EMAIL_ADDRESS_FROM=no-reply@example.com
+APP_EMAIL_TRANSPORT=smtp
+APP_EMAIL_HOST=smtp.example.com
+APP_EMAIL_PORT=465
+APP_EMAIL_USERNAME=contact@example.com
+APP_EMAIL_PASSWORD=password
+APP_EMAIL_ENCRYPTION=ssl
+###< app ###
