--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
             "App\\CLI\\": "src/CLI/src/",
             "App\\Packages\\Common\\": "src/Packages/Common/src/",
             "App\\Packages\\JobQueuing\\": "src/Packages/JobQueuing/src/",
-            "App\\Packages\\UserManagement\\": "src/Packages/UserManagement/src/"
+            "App\\Packages\\UserManagement\\": "src/Packages/UserManagement/src/",
+            "App\\Packages\\AccessManagement\\": "src/Packages/AccessManagement/src/"
         }
     },
     "autoload-dev": {
