--- a/src/Packages/Common/services/imports/projections.yaml
+++ b/src/Packages/Common/services/imports/projections.yaml
@@ -1,6 +1,6 @@
 services:
     _defaults:
         autowire: true
-        tags: ['app.event_projection']
 
-    App\Packages\Common\Infrastructure\AuditLogProjection: ~
+    App\Packages\Common\Domain\AuditLogProjection:
+        class: App\Packages\Common\Infrastructure\DbalAuditLogProjection
