--- a/src/Packages/UserManagement/services/imports/projections.yaml
+++ b/src/Packages/UserManagement/services/imports/projections.yaml
@@ -1,6 +1,6 @@
 services:
     _defaults:
         autowire: true
-        tags: ['app.event_projection']
 
-    App\Packages\UserManagement\Infrastructure\User\DbalUserProjection: ~
+    App\Packages\UserManagement\Domain\User\UserProjection:
+        class: App\Packages\UserManagement\Infrastructure\User\DbalUserProjection
