--- a/src/Packages/Common/services/prod.yaml
+++ b/src/Packages/Common/services/prod.yaml
@@ -2,20 +2,14 @@ services:
     _defaults:
         autowire: true
 
-    App\Packages\Common\Application\CommandBus: ~
+    App\Packages\Common\Application\Command\CommandBus: ~
     App\Packages\Common\Application\Authorization\RolesRepository: ~
     App\Packages\Common\Application\Authorization\UserFactory: ~
-    App\Packages\Common\Application\DateTimeFactory: ~
-
+    App\Packages\Common\Domain\DateTimeFactory: ~
     App\Packages\Common\Domain\EventDispatcher: ~
 
     App\Packages\Common\Application\StateManager:
         class: App\Packages\Common\Infrastructure\DbalStateManager
-
-    App\Packages\Common\Domain\Event\EventDispatcher: ~
-
-    App\Packages\Common\Application\Command\CommandHandlerRepository:
-        arguments: [!tagged 'app.command_handler']
 
     App\Packages\Common\Infrastructure\DbalConnection:
         alias: 'doctrine.dbal.default_connection'
@@ -23,7 +17,7 @@ services:
     App\Packages\Common\Installation\Fixtures\FixtureRepository:
         arguments: [!tagged 'app.fixture']
 
-    App\Packages\Common\Application\Mailing\Mailer:
+    App\Packages\Common\Application\Mailer:
         class: App\Packages\Common\Infrastructure\DefaultMailer
 
 imports:
