--- a/src/Packages/Common/_services/prod.yaml
+++ b/src/Packages/Common/_services/prod.yaml
@@ -14,8 +14,14 @@ services:
     App\Packages\Common\Installation\Fixtures\FixtureRepository:
         arguments: [!tagged 'app.fixture']
 
-    App\Packages\Common\Domain\Mailer:
-        class: App\Packages\Common\Infrastructure\SwiftMailerBridge
+    App\Packages\Common\Domain\Mailing\Mailer:
+        class: App\Packages\Common\Infrastructure\Mailing\SwiftMailerBridge
 
-imports:
-    - { resource: './imports/projections.yaml' }
+    App\Packages\Common\Domain\AuditLogProjection:
+        class: App\Packages\Common\Infrastructure\DbalAuditLogProjection
+
+    App\Packages\Common\Domain\JobQueuing\JobProjection:
+        class: App\Packages\Common\Infrastructure\JobQueuing\DbalJobProjection
+
+    App\Packages\Common\Domain\JobQueuing\JobExistsByIdQuery:
+        class: App\Packages\Common\Infrastructure\JobQueuing\JobExistsByIdQuery
