--- a/src/Packages/UserManagement/_services/imports/migrations.yaml
+++ b/src/Packages/UserManagement/_services/imports/migrations.yaml
@@ -4,3 +4,4 @@ services:
         tags: ['app.migration']
 
     App\Packages\UserManagement\Installation\Migrations\UsersMigrationBase: ~
+    App\Packages\UserManagement\Installation\Migrations\UserEmailAddressVerificationCodesMigration: ~
