--- a/src/WebApiV1Bundle/Endpoints/endpoints.yaml
+++ b/src/WebApiV1Bundle/Endpoints/endpoints.yaml
@@ -2,7 +2,7 @@ services:
     _defaults:
         public: true
         autowire: true
-        tags: ['web_api_v1.endpoint', 'controller.service_arguments']
+        tags: ['app.web_api_v1.endpoint', 'controller.service_arguments']
 
-    App\WebApiV1Bundle\Endpoint\User\CreateUserEndpoint: ~
-    App\WebApiV1Bundle\Endpoint\User\ChangeUserEndpoint: ~
+    App\WebApiV1Bundle\Endpoints\Documentation\GetOpenApiV2SpecificationEndpoint: ~
+    App\WebApiV1Bundle\Endpoints\User\CreateUserEndpoint: ~
