--- a/src/WebApiV1Bundle/Resources/Documentation/package.json
+++ b/src/WebApiV1Bundle/Resources/Documentation/package.json
@@ -8,6 +8,8 @@
     "swagger-ui": "^3.22.3"
   },
   "devDependencies": {
+    "css-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3"
   }
