--- a/src/WebApiV1Bundle/Endpoints/endpoints.yaml
+++ b/src/WebApiV1Bundle/Endpoints/endpoints.yaml
@@ -6,3 +6,4 @@ services:
 
     App\WebApiV1Bundle\Endpoints\SpecificationEndpoint: ~
     App\WebApiV1Bundle\Endpoints\UserManagement\CreateUserEndpoint: ~
+    App\WebApiV1Bundle\Endpoints\UserManagement\UpdateUserEndpoint: ~
