jwt auth preparation

--- a/.env.dev
+++ b/.env.dev
@@ -18,6 +18,10 @@ DATABASE_DEFAULT_DRIVER=pdo_mysql
 ###< doctrine/doctrine-bundle ###
 
 ###> app ###
+APP_AUTH_JWT_SECRET=83kbGKu5xaFO8cSBYR2LyTLzHbSu3h9z
+
+APP_API_HOST_PROTOCOL=http
+APP_API_HOST_NAME=localhost:8000
 APP_ADMIN_USERNAME=admin
 APP_ADMIN_EMAIL=admin@example.com
 APP_ADMIN_PASSWORD=test
