--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.10",
+        "firebase/php-jwt": "^5.0",
         "ramsey/uuid": "^3.8",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
