--- a/src/Utilities/services.yaml
+++ b/src/Utilities/services.yaml
@@ -2,5 +2,5 @@ services:
     _defaults:
         autowire: true
 
-    App\Utilities\AuthUserFactory: ~
+    App\Utilities\Authentication\AuthUserFactory: ~
     App\Utilities\DateTimeFactory: ~
