--- a/.env.dev
+++ b/.env.dev
@@ -19,6 +19,8 @@ DATABASE_DEFAULT_DRIVER=pdo_mysql
 
 ###> app ###
 APP_AUTH_JWT_SECRET=83kbGKu5xaFO8cSBYR2LyTLzHbSu3h9z
+APP_AUTH_JWT_ALGORITHM=HS256
+APP_AUTH_JWT_TTL_IN_MINUTES=120
 
 APP_API_HOST_PROTOCOL=http
 APP_API_HOST_NAME=localhost:8000
