--- a/src/Packages/UserManagement/services.yaml
+++ b/src/Packages/UserManagement/services.yaml
@@ -2,17 +2,16 @@ services:
     _defaults:
         autowire: true
 
+    App\Packages\UserManagement\Application\Query\UsersQueryHandler:
+        class: App\Packages\UserManagement\Infrastructure\Query\DbalUsersQueryHandler
+
     App\Packages\UserManagement\Domain\Handlers\CreateUserHandler:
         public: true
 
-    App\Packages\UserManagement\Domain\UserRepository: ~
-
-    App\Packages\UserManagement\Domain\UserValidation\UserValidator: ~
+    App\Packages\UserManagement\Domain\UserValidation\ExistingUsersByValuesQueryHandler:
+        class: App\Packages\UserManagement\Infrastructure\Command\DbalExistingUsersByValuesQueryHandler
 
     App\Packages\UserManagement\Domain\UserEventDispatcher: ~
 
     App\Packages\UserManagement\Domain\UserEventProjection:
-        class: App\Packages\UserManagement\Infrastructure\DbalUserEventProjection
-
-    App\Packages\UserManagement\Domain\UserValidation\UsersWithAnEqualValueQuery:
-        class: App\Packages\UserManagement\Infrastructure\DbalUsersWithAnEqualValueQuery
+        class: App\Packages\UserManagement\Infrastructure\Command\DbalUserEventProjection
