--- a/src/CLI/services_dev.yaml
+++ b/src/CLI/services_dev.yaml
@@ -1,8 +1,11 @@
 services:
     _defaults:
         autowire: true
+
+    App\CLI\Migrations\MigrateCommand:
         tags: ['console.command']
 
-    App\CLI\Migrations\MigrateCommand: ~
-    App\CLI\Migrations\RollbackCommand: ~
-    App\CLI\Migrations\MigrationRespository: ~
+    App\CLI\Migrations\RollbackCommand:
+        tags: ['console.command']
+
+    App\CLI\Migrations\MigrationRepository: ~
