prepared test + validation

--- a/src/Packages/UserManagement/services.yaml
+++ b/src/Packages/UserManagement/services.yaml
@@ -4,6 +4,7 @@ services:
 
     App\Packages\UserManagement\Application\Query\User\UsersQueryHandler:
         class: App\Packages\UserManagement\Infrastructure\Query\DbalUsersQueryHandler
+        public: true
 
     App\Packages\UserManagement\Domain\Handlers\CreateUserHandler:
         public: true
