--- a/src/Packages/AccessManagement/services.yaml
+++ b/src/Packages/AccessManagement/services.yaml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
 
-    App\Packages\AccessManagement\Application\Query\AuthUser\AuthUserByCredentialsQueryHandler:
-        class: App\Packages\AccessManagement\Infrastructure\Query\AuthUser\DbalAuthUserByCredentialsQueryHandler
+    App\Packages\AccessManagement\Application\Query\AuthUserInformationByCredentialsQueryHandler:
+        class: App\Packages\AccessManagement\Infrastructure\Query\DbalAuthUserInformationByCredentialsQueryHandler
 
-    App\Packages\AccessManagement\Application\Query\AuthUser\AuthUserFactory: ~
+    App\Packages\AccessManagement\Application\Query\AuthUserFactory: ~
