--- a/.env.dev
+++ b/.env.dev
@@ -20,6 +20,7 @@ DATABASE_DEFAULT_DRIVER=pdo_mysql
 ###> app ###
 APP_AUTH_JWT_SECRET=83kbGKu5xaFO8cSBYR2LyTLzHbSu3h9z
 APP_AUTH_JWT_ALGORITHM=HS256
+APP_AUTH_JWT_TTL_IN_MINUTES=2
 APP_AUTH_JWT_REFRESH_TTL_IN_MINUTES=2880
 
 APP_API_HOST_PROTOCOL=http
